# social-test

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  tailwind.config.js  tests.py
app/components/: Navbar.tsx
docs/: system_specification.md
migrations/versions/: 961d5d679df1_add_raw_content_and_rendered_content_to_.py
static/css/: custom.css
static/js/: darkMode.js  likes.js
templates/: _posts.html  base.html  feed.html  index.html  login.html  messages.html  post_list.html  profile.html  register.html
